--- a/spec/resources/ploy-publish.yml
+++ b/spec/resources/ploy-publish.yml
@@ -1,7 +1,7 @@
 ---
 bucket: bucketname
 deploy_name: some-project
-dist_dir: dist
+dist_dir: spec/resources/dist
 prep_cmd: lineman build
 upstart_files:
  - conf/some-project-initfile
