Upstart script adding works.

--- a/spec/resources/ploy-publish.yml
+++ b/spec/resources/ploy-publish.yml
@@ -2,7 +2,9 @@
 bucket: bucketname
 deploy_name: some-project
 dist_dir: spec/resources/dist
+prefix: /usr/local/someproject
 prep_cmd: lineman build
+prefix: /usr/local/someproject
 upstart_files:
- - conf/some-project-initfile
+ - spec/resources/conf/some-project-initfile
 
